# ttyrec

./: CHANGELOG.md  Cargo.toml  README.md  deny.toml
examples/: explode.rs
src/: creator.rs  error.rs  frame.rs  lib.rs  parser.rs  reader.rs  writer.rs
src/blocking/: mod.rs  reader.rs  writer.rs
