[package]
name = "ttyrec"
version = "0.3.3"
authors = ["Jesse Luehrs <doy@tozt.net>"]
edition = "2021"

description = "reads and writes ttyrec files"
license = "MIT"
repository = "https://git.tozt.net/ttyrec"
readme = "README.md"
keywords = ["ttyrec"]
categories = ["parser-implementations"]
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]

[dependencies]
futures-lite = { version = "1.12.0", optional = true }

[features]
default = ["async"]
async = ["futures-lite"]
