[package]
name = "ttyrec"
version = "0.4.0"
authors = ["Jesse Luehrs <doy@tozt.net>"]
edition = "2021"

description = "reads and writes ttyrec files"
license = "MIT"
repository = "https://git.tozt.net/ttyrec"
readme = "README.md"
keywords = ["ttyrec"]
categories = ["parser-implementations"]
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]

[dependencies]
tokio = { version = "1.29.1", optional = true, features = ["io-util"] }

[features]
default = []
async = ["tokio"]
